--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,80 @@
-matplotlib==3.4.2
-simplejson==3.16.0
-scipy==1.6.3
-numpy==1.20.3
+absl-py==0.15.0
+appdirs==1.4.4
+astunparse==1.6.3
+audioread==3.0.0
+cached-property==1.5.2
+cachetools==4.2.4
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==2.0.12
+clang==5.0
+coverage==5.5
+cycler==0.11.0
+dataclasses==0.8
+decorator==5.1.1
+deprecation==2.1.0
+eyed3==0.9.6
+filetype==1.2.0
+flatbuffers==1.12
+gast==0.4.0
+google-auth==1.35.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.48.2
+h5py==3.1.0
 hmmlearn==0.2.5
-eyeD3==0.9.6
-pydub==0.25.1
-scikit_learn==0.24.2
-tqdm==4.52.0
+idna==3.4
+imbalanced-learn==0.8.1
+imblearn==0.0
+importlib-metadata==4.8.3
+joblib==1.1.1
+keras==2.6.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+librosa==0.9.2
+llvmlite==0.36.0
+Markdown==3.3.7
+matplotlib==3.3.4
+numba==0.53.1
+numpy==1.19.5
+oauthlib==3.2.2
+opt-einsum==3.3.0
+packaging==21.3
+pandas==1.1.5
+Pillow==8.4.0
 plotly==5.3.1
-pandas==1.2.4
-imblearn
+pooch==1.6.0
+protobuf==3.19.6
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pyAudioAnalysis==0.3.14
+pycparser==2.21
+pydub==0.25.1
+pyparsing==3.0.7
+python-dateutil==2.8.2
+pytz==2023.3
+requests==2.27.1
+requests-oauthlib==1.3.1
+resampy==0.4.2
+rsa==4.9
+schedule==1.1.0
+scikit-learn==0.24.2
+scipy==1.5.4
+simplejson==3.16.0
+six==1.15.0
+soundfile==0.12.1
+tenacity==8.2.2
+tensorboard==2.6.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.6.2
+tensorflow-estimator==2.6.0
+termcolor==1.1.0
+threadpoolctl==3.1.0
+toml==0.10.2
+tqdm==4.52.0
+typing-extensions==3.7.4.3
+urllib3==1.26.15
+Werkzeug==2.0.3
+wrapt==1.12.1
+zipp==3.6.0
